@@ -101,6 +101,7 @@ void mgcv_pqrqy(double *b,double *a,double *tau,int *r,int *c,int *cb,int *tp,in
 SEXP mgcv_Rpiqr(SEXP X, SEXP BETA,SEXP PIV,SEXP NT);
 void mgcv_tmm(SEXP x,SEXP t,SEXP D,SEXP M, SEXP N);
 void mgcv_Rpbsi(SEXP A, SEXP NT);
+void mgcv_RPPt(SEXP a,SEXP r, SEXP NT);
 
 /* basis constructor/prediction routines*/
 
